Style the 2nd section / ajax-section with cards showing weather info. Design bug fix: prevent the search input from overflowing out of the html element.

--- a/styles/top-banner.css
+++ b/styles/top-banner.css
@@ -5,7 +5,7 @@
 }
 
 .heading {
-  font-size: 2em;
+  font-size: 1.7em;
   font-weight: 700;
   margin-bottom: 20px;
 }
@@ -15,6 +15,7 @@ form input {
   font-size: 1.2em;
   padding: 7px;
   margin-bottom: 15px;
+  max-width: 100%;
 }
 
 form input::placeholder {
@@ -34,8 +35,9 @@ form button {
 
 form span.msg {
   display: block;
+  visibility: hidden;
   font-size: 1em;
-  margin-top: 5px;
+  margin: 5px 0px 10px;
 }
 
 @media only screen and (min-width: 700px) {
